--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -5,6 +5,7 @@ ARG SOURCE_BRANCH
 ENV SOURCE_BRANCH $SOURCE_BRANCH
 
 RUN dnf install -y epel-release dnf-utils &&\
+    dnf upgrade -y openssl-libs &&\
     yum install dnf-plugins-core &&\
     yum-config-manager --set-enabled powertools &&\
     yum-config-manager --add-repo=https://negativo17.org/repos/epel-multimedia.repo &&\
